@@ -129,7 +129,7 @@ OnlineService * OnlineServicesPage::activeSrv() const
     OnlineService *activeSrv=0;
     foreach (const QModelIndex &idx, selected) {
         QModelIndex index = proxy.mapToSource(idx);
-        MusicLibraryItem *item=static_cast<MusicLibraryItem *>(index.internalPointer());
+        MusicLibraryItem *item=OnlineServicesModel::self()->toItem(index);
 
         if (item && MusicLibraryItem::Type_Root!=item->itemType()) {
             while(item->parentItem()) {
@@ -180,7 +180,7 @@ QList<Song> OnlineServicesPage::selectedSongs() const
     foreach (const QModelIndex &idx, selected) {
         QModelIndex index = proxy.mapToSource(idx);
         mapped.append(index);
-        MusicLibraryItem *item=static_cast<MusicLibraryItem *>(index.internalPointer());
+        MusicLibraryItem *item=OnlineServicesModel::self()->toItem(index);
 
         if (item && MusicLibraryItem::Type_Root!=item->itemType()) {
             while(item->parentItem()) {
@@ -212,7 +212,7 @@ void OnlineServicesPage::itemDoubleClicked(const QModelIndex &)
      if (1!=selected.size()) {
          return; //doubleclick should only have one selected item
      }
-     MusicLibraryItem *item = static_cast<MusicLibraryItem *>(proxy.mapToSource(selected.at(0)).internalPointer());
+     MusicLibraryItem *item = OnlineServicesModel::self()->toItem(selected.at(0));
      if (MusicLibraryItem::Type_Song==item->itemType()) {
          addSelectionToPlaylist();
      }
@@ -235,7 +235,7 @@ void OnlineServicesPage::controlActions()
     QSet<QString> services;
 
     foreach (const QModelIndex &idx, selected) {
-        MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(idx).internalPointer());
+        MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(idx));
 
         if (item) {
             if (MusicLibraryItem::Type_Root==item->itemType()) {
@@ -279,7 +279,7 @@ void OnlineServicesPage::configureService()
         return;
     }
 
-    MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(selected.first()).internalPointer());
+    MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(selected.first()));
 
     if (MusicLibraryItem::Type_Root==item->itemType()) {
         static_cast<OnlineService *>(item)->configure(this);
@@ -294,7 +294,7 @@ void OnlineServicesPage::refreshService()
         return;
     }
 
-    MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(selected.first()).internalPointer());
+    MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(selected.first()));
 
     if (MusicLibraryItem::Type_Root==item->itemType()) {
         OnlineService *srv=static_cast<OnlineService *>(item);
@@ -317,7 +317,7 @@ void OnlineServicesPage::removeService()
         return;
     }
 
-    MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(selected.first()).internalPointer());
+    MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(selected.first()));
 
     if (MusicLibraryItem::Type_Root==item->itemType()) {
         if (MessageBox::No==MessageBox::warningYesNo(this, i18n("Are you sure you wish to remove '%1'?").arg(item->data()))) {
@@ -338,7 +338,7 @@ void OnlineServicesPage::toggleService()
         return;
     }
 
-    MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(selected.first()).internalPointer());
+    MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(selected.first()));
 
     if (MusicLibraryItem::Type_Root==item->itemType()) {
         if (static_cast<OnlineService *>(item)->isLoaded() &&
@@ -354,15 +354,16 @@ void OnlineServicesPage::updateGenres(const QModelIndex &idx)
     if (idx.isValid()) {
         QModelIndex m=proxy.mapToSource(idx);
         if (m.isValid()) {
-            MusicLibraryItem::Type itemType=static_cast<MusicLibraryItem *>(m.internalPointer())->itemType();
+            MusicLibraryItem *item=OnlineServicesModel::self()->toItem(m);
+            MusicLibraryItem::Type itemType=item->itemType();
             if (itemType==MusicLibraryItem::Type_Root) {
-                genreCombo->update(static_cast<MusicLibraryItemRoot *>(m.internalPointer())->genres());
+                genreCombo->update(static_cast<MusicLibraryItemRoot *>(item)->genres());
                 return;
             } else if (itemType==MusicLibraryItem::Type_Artist) {
-                genreCombo->update(static_cast<MusicLibraryItemArtist *>(m.internalPointer())->genres());
+                genreCombo->update(static_cast<MusicLibraryItemArtist *>(item)->genres());
                 return;
             } else if (itemType==MusicLibraryItem::Type_Album) {
-                genreCombo->update(static_cast<MusicLibraryItemAlbum *>(m.internalPointer())->genres());
+                genreCombo->update(static_cast<MusicLibraryItemAlbum *>(item)->genres());
                 return;
             }
         }
@@ -399,7 +400,7 @@ void OnlineServicesPage::download()
 
     if (!songs.isEmpty()) {
         QModelIndex idx = view->selectedIndexes().at(0);
-        MusicLibraryItem *item=static_cast<MusicLibraryItem *>(proxy.mapToSource(idx).internalPointer());
+        MusicLibraryItem *item=OnlineServicesModel::self()->toItem(proxy.mapToSource(idx));
 
         while (item && item->parentItem()) {
             item=item->parentItem();
